openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dairy-ledger
spec:
  selector:
    app: dairy-ledger
  ports:
    - port: 3000
      targetPort: 3000
